@@ -284,17 +284,18 @@ data.raw.technology["coal-liquefaction"].unit.ingredients = {
   {"electromagnetic-science-pack", 1}
 }
 
-table.insert(data.raw.technology["kovarex-enrichment-process"].prerequisites, "sp-nuclear-science-pack-2")  -- Needs to be done with table.insert, otherwise there is a problem in krastorio
+data.raw.technology["kovarex-enrichment-process"].prerequisites = {"sp-breeder-reactor"}
 data.raw.technology["kovarex-enrichment-process"].unit.ingredients = {
   {"sp-automation-science-pack-2", 1},
   {"sp-logistic-science-pack-2", 1},
   {"sp-material-science-pack-2", 1},
-  {"sp-electronic-science-pack-2", 1},
   {"sp-geological-science-pack-2", 1},
+  {"sp-electronic-science-pack-2", 1},
   {"sp-chemical-science-pack-2", 1},
+  {"sp-metallurgic-science-pack-2", 1},
+  {"sp-electromagnetic-science-pack-2", 1},
   {"production-science-pack", 1},
-  {"utility-science-pack", 1},
-  {"sp-nuclear-science-pack-2", 1}
+  {"utility-science-pack", 1}
 }
 
 data.raw.technology["nuclear-power"].effects = {
